--- a/_posts/2018-09-27-john-papa.markdown
+++ b/_posts/2018-09-27-john-papa.markdown
@@ -7,5 +7,5 @@ expertise: PRINCIPAL DEVELOPER ADVOCATE at MICROSOFT
 
 John Papa is a Principal Developer Advocate with Microsoft and an alumni of the Google Developer Expert, Microsoft Regional Director, and MVP programs. He's passionate about Web and mobile technologies and often enjoys speaking around the world at keynotes and sessions for conferences including NgConf, Build, Ignite, VSLive and AngleBrackets. 
 
-Here are links to her presentation materials:
+Here are links to his presentation materials:
 
